src/tests/snapshots/niri__tests__window_opening__check_target_size@fsF-omT-dwP0.25-dhP0.5-wfsAU.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: false\nopen maximized: true\ndefault column width: P0.25\ndefault window height: P0.5\nwant fullscreen: AU"
expression: snapshot
---
initial configure:
size: 1248 × 336, bounds: 1248 × 688, states: []

post-map configures:
size: 1248 × 336, bounds: 1248 × 688, states: []
size: 1248 × 336, bounds: 1248 × 688, states: [Activated]
